zoom and displace@

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "*.ejs": "plaintext",
     "mlx.h": "c",
-    "cmath": "c"
+    "cmath": "c",
+    "ios": "c"
   }
 }
